--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
-VITE_FIREBASE_API_KEY = AIzaSyCMXzvWL0aCIG5wJ_lrB29HIPV_LnIKhE8
-VITE_FIREBASE_AUTH_DOMAIN = task-daily-app.firebaseapp.com 
-VITE_FIREBASE_PROJECT_ID = task-daily-app 
-VITE_FIREBASE_STORAGE_BUCKET = task-daily-app.appspot.com 
-VITE_FIREBASE_MESSAGING_SENDER_ID = 804057286738 
-VITE_FIREBASE_APP_ID = 1:804057286738:web:99513da57bce30ae5b378b
+VITE_FIREBASE_API_KEY = AIzaSyCAeo8hXdgLrJPMDL2nb0xVGmBQLzmyUuM
+VITE_FIREBASE_AUTH_DOMAIN = task-daily-app-realtime.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID = task-daily-app-realtime
+VITE_FIREBASE_STORAGE_BUCKET = task-daily-app-realtime.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID = 398817335285
+VITE_FIREBASE_APP_ID = 1:398817335285:web:a814f342030f65eaaf32bc
